delete and add some files

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ ChampRecommender/Dataset/response_1682487245967.json
 ChampRecommender/Properties
 champion.ipynb
 ChampRecommender/Windows/orignal_champion/*.jpg
+ChampRocommenderInstaller
