img and remove button

--- a/ChampRecommender/ChampRecommender.csproj
+++ b/ChampRecommender/ChampRecommender.csproj
@@ -282,7 +282,23 @@
     <None Remove="Windows\main_champion\Alistar_0.jpg" />
     <None Remove="Windows\main_champion\Amumu_0.jpg" />
     <None Remove="Windows\main_champion\Anivia_0.jpg" />
+    <None Remove="Windows\main_champion\Annie_0.jpg" />
+    <None Remove="Windows\main_champion\Aphelios_0.jpg" />
+    <None Remove="Windows\main_champion\Ashe_0.jpg" />
+    <None Remove="Windows\main_champion\Aurelion Sol_0.jpg" />
+    <None Remove="Windows\main_champion\Azir_0.jpg" />
+    <None Remove="Windows\main_champion\Bard_0.jpg" />
+    <None Remove="Windows\main_champion\Bel%27Veth_0.jpg" />
+    <None Remove="Windows\main_champion\Blitzcrank_0.jpg" />
+    <None Remove="Windows\main_champion\Brand_0.jpg" />
+    <None Remove="Windows\main_champion\Braum_0.jpg" />
+    <None Remove="Windows\main_champion\Caitlyn_0.jpg" />
+    <None Remove="Windows\main_champion\Camille_0.jpg" />
+    <None Remove="Windows\main_champion\Cassiopeia_0.jpg" />
+    <None Remove="Windows\main_champion\Corki_0.jpg" />
+    <None Remove="Windows\main_champion\Darius_0.jpg" />
     <None Remove="Windows\main_champion\Jax_0.jpg" />
+    <None Remove="Windows\main_champion\Nautilus_0.jpg" />
     <None Remove="Windows\main_champion\Teemo_0.jpg" />
     <None Remove="Windows\Malphite_0.jpg" />
     <None Remove="Windows\Malzahar_0.jpg" />
@@ -750,7 +766,23 @@
     <Resource Include="Windows\main_champion\Alistar_0.jpg" />
     <Resource Include="Windows\main_champion\Amumu_0.jpg" />
     <Resource Include="Windows\main_champion\Anivia_0.jpg" />
+    <Resource Include="Windows\main_champion\Annie_0.jpg" />
+    <Resource Include="Windows\main_champion\Aphelios_0.jpg" />
+    <Resource Include="Windows\main_champion\Ashe_0.jpg" />
+    <Resource Include="Windows\main_champion\Aurelion Sol_0.jpg" />
+    <Resource Include="Windows\main_champion\Azir_0.jpg" />
+    <Resource Include="Windows\main_champion\Bard_0.jpg" />
+    <Resource Include="Windows\main_champion\Bel'Veth_0.jpg" />
+    <Resource Include="Windows\main_champion\Blitzcrank_0.jpg" />
+    <Resource Include="Windows\main_champion\Brand_0.jpg" />
+    <Resource Include="Windows\main_champion\Braum_0.jpg" />
+    <Resource Include="Windows\main_champion\Caitlyn_0.jpg" />
+    <Resource Include="Windows\main_champion\Camille_0.jpg" />
+    <Resource Include="Windows\main_champion\Cassiopeia_0.jpg" />
+    <Resource Include="Windows\main_champion\Corki_0.jpg" />
+    <Resource Include="Windows\main_champion\Darius_0.jpg" />
     <Resource Include="Windows\main_champion\Jax_0.jpg" />
+    <Resource Include="Windows\main_champion\Nautilus_0.jpg" />
     <Resource Include="Windows\main_champion\Teemo_0.jpg" />
     <Resource Include="Windows\MSI23_Announcement_Header_57.png" />
     <Resource Include="Windows\_crop_champion\Aatrox_0.jpg" />
